--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,5 @@
-ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: aqua;
-}
 
-li{
-    float: left;
-}
 
-li a{
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover{
-    background-color: blue;
+a.nav-link:hover{
+    background-color: grey;
 }
