:lipstick: Muchos cambios de estilo - Isaac

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,207 @@
-.fondop{
+/**************************BARRA DE NAVEGACION************************************/
+.navbar{
+    background: #fff;
+    height: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+}
+
+.navbar-container{
+    display: flex;
+    justify-content: space-between;
+    height: 80px;
+    z-index: 1;
+    width: 100%;
+    max-width: 1300px;
+    margin: 0 auto;
+    padding: 0 50px;
+}
+
+#navbar-logo{
+    background-size: 100%;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.navbar-menu{
+    display: flex;
+    align-items: center;
+    list-style: none;
+    text-align: center;
+}
+
+.navbar-item{
+    height: 80px;
+}
+
+.navbar-links{
+    color: #292E49;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    padding: 0 2rem;
+    height: 100%;
+}
+
+.navbar-links:hover{
+    color: orange;
+    transition: all 0.3s ease;
+}
+
+/******************RESPONSIVIDAD*********************************************/
+@media screen and (max-width: 960px){
+    .navbar-container{
+        display: flex;
+        justify-content: space-between;
+        height: 80px;
+        z-index: 1;
+        width: 100%;
+        max-width: 1300px;
+        padding: 0;
+    }
+    .navbar-menu{
+        display: grid;
+        grid-template-columns: auto;
+        margin: 0;
+        width: 100%;
+        position: absolute;
+        top: -1000px;
+        opacity: 1;
+        transition: all 0.5s ease;
+        height: 50vh;
+        z-index: -1;
+        background: #fff;
+    }
+    .navbar-menu.active{
+        top: 100%;
+        opacity: 1;
+        transition: all 0.5s ease;
+        z-index: 99;
+        height: 70vh;
+        font-size: 1.6rem;
+    }
+    #navbar-logo{
+        padding-left: 25px;
+    }
+    .navbar-toggle .bar{
+        width: 25px;
+        height: 3px;
+        margin: 5px auto;
+        transition: all 0.3s ease-in-out;
+        background: #292E49;
+    }
+    .navbar-item{
+        width: 100%;
+    }
+    .navbar-links{
+        text-align: center;
+        padding: 2rem;
+        width: 100%;
+        display: table;
+    }
+    #mobile-menu{
+        position: absolute;
+        top: 20%;
+        right: 5%;
+        transform: translate(5%, 20%);
+    }
+
+    .navbar-toggle .bar{
+        display: block;
+        cursor: pointer;
+    }
+    #mobile-menu.is-active .bar:nth-child(2){
+        opacity: 0;
+    }
+    #mobile-menu.is-active .bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);
+    }
+    #mobile-menu.is-active .bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);
+    }
+}
+
+/*************************************HISTORIA Y LOLPRO****************************************/
+
+.first-container{
+    /* background-image: url(images/fondo.png); */
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-top: solid 20px #FF9000;
+    border-bottom: solid 20px #FC5656;
+}
+
+.container-wrapper{
+    display: flex;
+}
+
+.img-box{
+    margin: 1rem;
+    background-size: cover;
+    position: relative;
+    max-width: 500px;
+}
+
+.img-box img{
+    width: 100%;
+}
+
+.first-container .img-box img{
+    max-width: 300px;
+}
+
+.text-container{
+    margin: 2rem;
+    align-items: center;
+}
+
+.text-container h2{
+    border-bottom: 3px solid #FF9000;
+    margin-bottom: 1rem;
+}
+
+.text-container p{
+    text-align: justify;
+    margin-bottom: 1rem;
+}
+
+.second-container, .third-container{
+    /* background-image: url(images/fondo.png); */
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom: solid 20px #FC5656;
+}
+
+.fourth-container{
+    /* background-image: url(images/fondo.png); */
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@media screen and (max-width: 980px) {
+    .container-wrapper{
+        flex-direction: column;
+        align-items: center;
+    }
+    .first-container .img-box img{
+        max-width: 200px;
+    }
+}
+
+/* .fondop{
     background-image: url("https://www.ginx.tv/uploads2/League_of_Legends/Esports/Worlds2022Host_main.webp");
     height: 200px;
     background-size: cover;
@@ -15,4 +218,4 @@ body{
 
 a.nav-link:hover{
     background-color: grey;
-}
+} */
