--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,47 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Mollen Personal Use', sans-serif;
+}
+
+
+.main{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background-image: url(images/fondo.png);
+    background-size: cover;
+}
+
+.main-container{
+    position: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.img-container{
+    align-items: center;
+    background-image: url(https://i.blogs.es/bf5ad0/league-of-legends-destacada/1366_521.jpeg);
+    background-size: cover;
+}
+
+#main-img{
+    height: 50%;
+    width: 600px;
+    margin-left: 399px;
+}
+
+#summ-cup{
+    width: 200px;
+    height: 200px;
+}
+
 /**************************BARRA DE NAVEGACION************************************/
 .navbar{
-    background: #fff;
-    height: 120px;
+    background: #292E49;
+    height: 90px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,6 +69,12 @@
     cursor: pointer;
 }
 
+#img-logo{
+    width: 100%;
+    height: 100%;
+    
+}
+
 .navbar-menu{
     display: flex;
     align-items: center;
@@ -41,7 +87,7 @@
 }
 
 .navbar-links{
-    color: #292E49;
+    color: white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -77,7 +123,7 @@
         transition: all 0.5s ease;
         height: 50vh;
         z-index: -1;
-        background: #fff;
+        background: #292E49;
     }
     .navbar-menu.active{
         top: 100%;
@@ -95,7 +141,7 @@
         height: 3px;
         margin: 5px auto;
         transition: all 0.3s ease-in-out;
-        background: #292E49;
+        background: white;
     }
     .navbar-item{
         width: 100%;
@@ -131,7 +177,7 @@
 /*************************************HISTORIA Y LOLPRO****************************************/
 
 .first-container{
-    /* background-image: url(images/fondo.png); */
+    background-image: url(images/fondo.png);
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -148,11 +194,11 @@
     margin: 1rem;
     background-size: cover;
     position: relative;
-    max-width: 500px;
+    max-width: 600px;
 }
 
 .img-box img{
-    width: 100%;
+    width: 500px;
 }
 
 .first-container .img-box img{
@@ -175,7 +221,7 @@
 }
 
 .second-container, .third-container{
-    /* background-image: url(images/fondo.png); */
+    background-image: url(images/fondo.png);
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -184,7 +230,7 @@
 }
 
 .fourth-container{
-    /* background-image: url(images/fondo.png); */
+    background-image: url(images/fondo.png);
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -201,21 +247,128 @@
     }
 }
 
-/* .fondop{
-    background-image: url("https://www.ginx.tv/uploads2/League_of_Legends/Esports/Worlds2022Host_main.webp");
-    height: 200px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    text-align: center;
-    color: white;
+/***********************************FOOTER************************************/
+
+.footer-container{
+    background-color: #292E49;
+    padding: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-body{
-    background-image: url("https://boosteria.org/wp-content/uploads/worlds-2014.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
+.footer-links{
+    width: 100%;
+    max-width: 1300px;
+    display: flex;
+    justify-content: center;
 }
 
-a.nav-link:hover{
-    background-color: grey;
-} */
+.footer-link-wrapper{
+    display: flex;
+    /*width: 100%; /*No width*/
+}
+
+.footer-links-items{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 16px;
+    text-align: left;
+    width: 260px; /*260 px*/
+    box-sizing: border-box;
+}
+
+.footer-links-items h3{
+    margin-bottom: 16px;
+    color: #fff;
+}
+
+.footer-links-items p a{
+    color: #fff;
+    margin-bottom: 0.5rem;
+}
+
+.footer-links-items p a:hover{
+    color: orange;
+    transition: all 0.3s ease;
+}
+
+.footer-links-items button{
+    color: #fff;
+    padding: 10px 20px;
+    background-color: #FC5656;
+    border: none;
+    outline: none;
+    border-radius: 80px;
+    font-size: 1rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.footer-links-items input{
+    border-radius: 4px;
+}
+
+.pie{
+    background-color: #F5AF19;
+    color: #292E49;
+    font-size: 16px;
+}
+
+.pie-wrap{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 10px;
+}
+
+.pie-wrap p{
+    font-weight: bold;
+}
+
+.website-right{
+    margin-left: 10%;
+}
+
+.inputBox{
+    position: relative;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.inputBox input{
+    width: 100%;
+    border: 1px solid #555;
+    padding: 10px;
+    color: #111;
+    outline: none;
+    font-size: 16px;
+    resize: none;
+}
+
+.inputBox input[type="submit"]{
+    font-size: 1em;
+    color: #fff;
+    background: #FC5656;
+    display: inline-block;
+    text-decoration: none;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 1000px) {
+    .footer-link-wrapper{
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+    }
+    .pie-wrap p{
+        font-size: 12px;
+    }
+}
