--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Mollen Personal Use', sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-
 
 .main{
     position: relative;
@@ -12,6 +11,15 @@
     height: 100%;
     background-image: url(images/fondo.png);
     background-size: cover;
+}
+
+.main h1{
+    text-align: center;
+}
+
+.main p{
+    margin: 20px;
+    text-align: center;
 }
 
 .main-container{
@@ -174,6 +182,90 @@
     }
 }
 
+/**************************************INDEX*********************************************/
+.services{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.services h2{
+    background-size: 100%;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    font-size: 2.5rem;
+}
+
+.services-container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.services-card{
+    margin: 1rem;
+    height: 327px;
+    width: 349px;
+    border-radius: 4px;
+    background-size: cover;
+    position: relative;
+}
+
+.services-card img{
+    width: 200px;
+    height: 200px;
+}
+
+.services-card a{
+    color: #fff;
+    padding: 10px 20px;
+    background-color: #FC5656;
+    border: none;
+    outline: none;
+    border-radius: 8px;
+    font-size: 1rem;
+    margin-top: 10px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.services-card a:hover{
+    transform: scale(1.075);
+    transition: 0.2s ease-in;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 1300px) {
+    .services-container{
+        grid-template-columns: 1fr 1fr;
+    }
+    .services h2{
+        font-size: 2rem;
+        /*margin-top: 12rem;*/
+   }
+}
+
+@media screen and (max-width: 480px) {
+    .services-container{
+        grid-template-columns: 1fr;
+    }
+    .services h2{
+        font-size: 1.2rem;
+    }
+    .services-card h3{
+        font-size: 1rem;
+    }
+    .services-card a{
+        padding: 8px 10px;
+    }
+    .services-card{
+        left: 40px;
+    }
+    .services-card img{
+        width: 300px;
+    }
+}
+
 /*************************************HISTORIA Y LOLPRO****************************************/
 
 .first-container{
@@ -237,6 +329,25 @@
     align-items: center;
 }
 
+#btn-masinfo{
+    color: #fff;
+    padding: 10px 20px;
+    background-color: #FC5656;
+    border: none;
+    outline: none;
+    border-radius: 8px;
+    font-size: 1rem;
+    margin-top: 10px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+#btn-masinfo:hover{
+    transform: scale(1.075);
+    transition: 0.2s ease-in;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 980px) {
     .container-wrapper{
         flex-direction: column;
@@ -295,7 +406,7 @@
     transition: all 0.3s ease;
 }
 
-.footer-links-items button{
+#btn-Buscar{
     color: #fff;
     padding: 10px 20px;
     background-color: #FC5656;
